# boolua

./: Cargo.toml  LICENSE  README.md
boolua_common/: Cargo.toml
boolua_common/src/: lib.rs
boolua_hir/: Cargo.toml
boolua_hir/src/: lib.rs  structs.rs
boolua_lexer/: Cargo.toml
boolua_lexer/src/: lib.rs  string.rs
boolua_parser/: Cargo.toml
boolua_parser/src/: combinators.rs  lib.rs  number.rs  pretty_print.rs  structs.rs  tests.rs
boolua_parser/src/snapshots/: boolua_parser__tests__parse_and_verify_ambiguity1.snap  boolua_parser__tests__parse_and_verify_ambiguity2.snap  boolua_parser__tests__parse_and_verify_numbers.snap  boolua_parser__tests__parse_and_verify_simple_expr.snap  boolua_parser__tests__parse_and_verify_simple_if.snap
programs/: ambiguous.lua  markov.lua  numbers.lua  simple_if.lua  unambiguous.lua
src/: lex.rs  lib.rs  main.rs  parse.rs
src/lex/: string.rs
src/parse/: tests.rs
src/parse/snapshots/: boolua__parse__tests__parse_and_verify_numbers.snap  boolua__parse__tests__parse_and_verify_simple_expr.snap  boolua__parse__tests__parse_and_verify_simple_if.snap
tests/: markov.rs
