[package]
name = "boolua_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boolua_common = { path = "../boolua_common" }
boolua_lexer = { path = "../boolua_lexer" }
chumsky = "0.8.0"
insta = "1.12.0"
lazy_static = "1.4.0"
paste = "1.0.6"
regex = "1.5.4"
